# github-traffic-report

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: nextrelease.yml
github_traffic_report/: api.py  cli.py  email.py  logger.py  output.py  repos.py
github_traffic_report/templates/: report.html  table.html
scripts/: docker-run  install  release  run
testdata/: clones.json  paths.json  referrers.json  views.json
