[tool.poetry]
name = "github-traffic-report"
version = "1.1.1"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]

[tool.poetry.scripts]
github-traffic-report = "github_traffic_report.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
